k8s/manifests/history-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: history-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: history
  template:
    metadata:
      labels:
        app: history
    spec:
      containers:
        - name: history
          image: b9jmthkk/history
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 2m
              memory: 80Mi
