k8s/manifests/matching-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching
  template:
    metadata:
      labels:
        app: matching
    spec:
      containers:
        - name: matching
          image: b9jmthkk/matching
          ports:
            - name: http
              containerPort: 8001
          resources:
            requests:
              cpu: 5m
              memory: 80Mi
