k8s/manifests/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-persistent-volume-claim
      containers:
        - name: mongo
          image: mongo
          ports:
            - name: http
              containerPort: 27017
          resources:
            requests:
              cpu: 5m
              memory: 90Mi
