k8s/manifests/question-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: question-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: question
  template:
    metadata:
      labels:
        app: question
    spec:
      containers:
        - name: question
          image: b9jmthkk/question
          ports:
            - name: http
              containerPort: 8500
          resources:
            requests:
              cpu: 10m
              memory: 120Mi
