k8s/manifests/room-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: room-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: room
  template:
    metadata:
      labels:
        app: room
    spec:
      containers:
        - name: room
          image: b9jmthkk/room
          ports:
            - name: http
              containerPort: 8022
          resources:
            requests:
              cpu: 5m
              memory: 100Mi
