k8s/manifests/frontend-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
