k8s/manifests/history-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: history-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: history
  ports:
    - name: http
      port: 8080
      targetPort: 8080
