k8s/manifests/matching-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: matching
  ports:
    - name: http
      port: 8000
      targetPort: 8000
