k8s/manifests/mongo-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: http
      port: 27017
      targetPort: 27017
