k8s/manifests/peerjs-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peerjs-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: peerjs
  ports:
    - name: http
      port: 9000
      targetPort: 9000
