k8s/manifests/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - name: http
      port: 5432
      targetPort: 5432
