k8s/manifests/question-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: question-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: question
  ports:
    - name: http
      port: 8000
      targetPort: 8000
