k8s/manifests/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: http
      port: 6379
      targetPort: 6379
