k8s/manifests/room-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: room-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: room
  ports:
    - name: http
      port: 8022
      targetPort: 8022
