k8s/manifests/user-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - name: http
      port: 8000
      targetPort: 8000
